Refactor deprecated code when creating new class instance